--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -5,11 +5,11 @@
     --color-primary-3: #740613;
     --color-primary-4: #4C0009;
 
-    --color-secondary-1-0: #9F7D20;
-    --color-secondary-1-1: #E6C56F;
-    --color-secondary-1-2: #BE9B3F;
-    --color-secondary-1-3: #795A06;
-    --color-secondary-1-4: #4F3900;
+    --color-secondary-0: #9F7D20;
+    --color-secondary-1: #E6C56F;
+    --color-secondary-2: #BE9B3F;
+    --color-secondary-3: #795A06;
+    --color-secondary-4: #4F3900;
 
     --color-tertiary-0: #391F6D;
     --color-tertiary-1: #6D549D;
@@ -31,7 +31,7 @@ body {
     color: var(--color-quaternary-0)
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1500px) {
     #container {
         text-align: center;
         margin: auto;
@@ -39,6 +39,14 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        height: 100vh;
+    }
+
+    #project-container {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         height: 100vh;
     }
     
@@ -93,7 +101,7 @@ body {
     }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1500px) {
     .project {
         position: relative;
         z-index: 500;
@@ -135,6 +143,20 @@ body {
 
 .box:hover {
     background-color: var(--color-tertiary-2);
+}
+
+a {
+    color: var(--color-quaternary-0);
+}
+
+a:hover {
+    color: var(--color-quaternary-4);
+}
+
+#back {
+    position: fixed;
+    font-size: 5rem;
+    text-decoration: none;
 }
 
 @keyframes box {
