--- a/resources/style/msc.css
+++ b/resources/style/msc.css
@@ -1,57 +1,93 @@
 :root {
-    overflow-y: auto;
+  overflow-y: auto;
 }
 
 .checkbox {
-    list-style-image: url('/resources/checkbox-G.png');
+  list-style-image: url('/resources/checkbox-G.png');
 }
 
 .checked {
-    list-style-image: url('/resources/checkbox-P.png');
+  list-style-image: url('/resources/checkbox-P.png');
 }
 
 code {
-    border-radius: 5px;
-    padding: 0px 2px 0px 2px;
-    background-color: var(--color-secondary-4);
-    cursor: pointer;
+  border-radius: 5px;
+  padding: 0px 2px 0px 2px;
+  background-color: var(--color-secondary-4);
+  cursor: pointer;
 }
 
 code::selection {
-    text-shadow: initial;
-    color: white;
+  text-shadow: initial;
+  color: white;
 }
 
 code:hover {
-    background-color: var(--color-secondary-2);
+  background-color: var(--color-secondary-2);
 }
 
 code:active {
-    background-color: var(--color-secondary-1);
+  background-color: var(--color-secondary-1);
 }
 
 img {
-    margin: 20px;
+  margin: 20px;
 }
 
 h1 {
-    font-size:4rem;
+  font-size: 4rem;
 }
 
 h3 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 li {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
-img:focus {
-    margin: 0;
-    padding: 0;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    width: calc(100vw - 50rem);
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: #0000001c;
+}
+
+.popup {
+  position: relative;
+
+  top: 50%;
+  left: 50%;
+
+  width: 60%;
+
+  transform: translateX(-50%) translateY(-50%);
+
+  background-color: black;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.popup-image {
+  max-width: calc(100%);
+  max-height: calc(100%);
+
+  margin: auto;
+}
+
+.popup-close {
+  position: absolute;
+
+  right: 1rem;
+  top: 0rem;
+
+  width: 1rem;
+  height: 1rem;
+
+  font-size: 2rem;
+
+  cursor: pointer;
 }
