edit tomate-launcher and msc page

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -1,34 +1,9 @@
-:root {
-  --color-primary-0: #991F2D;
-  --color-primary-1: #DC6B78;
-  --color-primary-2: #B63C4A;
-  --color-primary-3: #740613;
-  --color-primary-4: #4C0009;
-
-  --color-secondary-0: #9F7D20;
-  --color-secondary-1: #E6C56F;
-  --color-secondary-2: #BE9B3F;
-  --color-secondary-3: #795A06;
-  --color-secondary-4: #4F3900;
-
-  --color-tertiary-0: #391F6D;
-  --color-tertiary-1: #6D549D;
-  --color-tertiary-2: #4E3382;
-  --color-tertiary-3: #240C53;
-  --color-tertiary-4: #150436;
-
-  --color-quaternary-0: #F5F5F5;
-  --color-quaternary-1: #EBEBEB;
-  --color-quaternary-2: #DADADA;
-  --color-quaternary-3: #CACACA;
-  --color-quaternary-4: #B9B9B9;
-
-  overflow: hidden;
-}
+@import url('./colors.css');
 
 body {
   background-color: var(--color-tertiary-4);
-  color: var(--color-quaternary-0)
+  color: var(--color-quaternary-0);
+  margin: 0;
 }
 
 @media screen and (min-width: 1500px) {
@@ -42,14 +17,6 @@ body {
     height: 100vh;
   }
 
-  #project-container {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-  }
-
   #main {
     z-index: 5;
     padding: 0;
@@ -60,7 +27,7 @@ body {
   .project {
     z-index: 500;
     width: 30%;
-    transition: opacity .2s, box-shadow .1s, border-radius .2s;
+    transition: box-shadow .1s, border-radius .2s;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -69,7 +36,6 @@ body {
     border-radius: 10px;
     position: fixed;
     top: 50%;
-    opacity: 0.2;
   }
 
 
@@ -84,14 +50,13 @@ body {
   }
 
   .project:hover {
-    opacity: 1;
     box-shadow: #240C53 0 0 25px;
     border-radius: 20px;
   }
 
   .project:focus {
-    opacity: 1;
     box-shadow: var(--color-primary-0) 0 0 25px;
+    outline: 0;
   }
 
 
