--- a/resources/style/msc.css
+++ b/resources/style/msc.css
@@ -1,15 +1,93 @@
-:root {
-  overflow-y: auto;
+@import url("./colors.css");
+
+body {
+  background-color: var(--color-tertiary-4);
+  color: var(--color-quaternary-0);
+  margin: 0;
+
+  overflow-x: hidden;
 }
 
-.checkbox {
-  list-style-image: url('/resources/checkbox-G.png');
+/* Header */
+header {
+  display: flex;
+  flex-direction: row;
+
+  position: sticky;
+  top: 0px;
+
+  width: 100%;
+
+  background-color: black;
+  box-shadow: 2px 0 10px black;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.checked {
-  list-style-image: url('/resources/checkbox-P.png');
+header h1 {
+  margin: 0;
+  text-transform: uppercase;
 }
 
+header a {
+  text-decoration: none;
+  color: white;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+header a:hover,
+header a:focus {
+  color: #980000;
+  outline: 0;
+}
+
+/* Main */
+main {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.features {
+  display: flex;
+  flex-direction: row;
+}
+
+.features div {
+  margin: 1rem;
+  text-align: center;
+}
+
+.installation li {
+  list-style-type: decimal;
+}
+
+.img-viewer {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: black;
+  z-index: 10000;
+
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.img-viewer img {
+  max-width: 90%;
+  max-height: 90%;
+}
+
+/* Code */
 code {
   border-radius: 5px;
   padding: 0px 2px 0px 2px;
@@ -28,66 +106,4 @@ code:hover {
 
 code:active {
   background-color: var(--color-secondary-1);
-}
-
-img {
-  margin: 20px;
-}
-
-h1 {
-  font-size: 4rem;
-}
-
-h3 {
-  font-size: 2rem;
-}
-
-li {
-  font-size: 1.5rem;
-}
-
-.background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  background-color: #0000001c;
-}
-
-.popup {
-  position: relative;
-
-  top: 50%;
-  left: 50%;
-
-  width: 60%;
-
-  transform: translateX(-50%) translateY(-50%);
-
-  background-color: black;
-  padding: 20px;
-  border-radius: 20px;
-}
-
-.popup-image {
-  max-width: calc(100%);
-  max-height: calc(100%);
-
-  margin: auto;
-}
-
-.popup-close {
-  position: absolute;
-
-  right: 1rem;
-  top: 0rem;
-
-  width: 1rem;
-  height: 1rem;
-
-  font-size: 2rem;
-
-  cursor: pointer;
 }
