--- a/resources/style/tomate-launcher.css
+++ b/resources/style/tomate-launcher.css
@@ -22,7 +22,10 @@ header {
 
   /* background-color: #1e272b2d; */
   box-shadow: 2px 0 10px #202020b4;
-  backdrop-filter: blur(7px);
+  backdrop-filter: blur(7px) brightness(.9);
+
+  /* box-shadow: 2px 0 2px black;
+  border-bottom: 2px solid #980000d0; */
 
 
   padding-top: 10px;
@@ -41,8 +44,6 @@ header a {
   color: white;
   margin-left: 1rem;
   margin-right: 1rem;
-
-
 }
 
 header a:hover,
@@ -100,9 +101,8 @@ header a:focus {
   flex-direction: column;
   align-items: center;
   background-color: #181818;
-  box-shadow: -2px 0 10px #20202038;
-  /* backdrop-filter: blur(7px); */
-  /* border-top: 2px solid #4747cf; */
+  box-shadow: -2px 0 2px black;
+  border-top: 2px solid #980000d0;
   min-height: calc(100vh - 390px - 20rem);
   animation: slide2 1s ease, fade3 1s;
   animation-fill-mode: forwards;
