--- a/resources/style/tomate-launcher.css
+++ b/resources/style/tomate-launcher.css
@@ -3,30 +3,28 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
-  background: url("/projects/tomate-launcher/images/banner.webp") no-repeat
+  background: url('/projects/tomate-launcher/images/banner.webp') no-repeat
     center center fixed;
   background-size: cover;
 }
 
 header {
-  /* display: flex; */
+  display: flex;
   flex-direction: row;
+  align-items: center;
 
-  /* position: sticky; */
-  /* top: 0px; */
+  font-size: 2rem;
 
   width: 100%;
   height: 3rem;
 
-  /* background-color: #1e272b2d; */
   box-shadow: 2px 0 10px #202020b4;
-  backdrop-filter: blur(7px) brightness(.9);
+  backdrop-filter: blur(7px) brightness(0.9);
 
-  /* box-shadow: 2px 0 2px black;
-  border-bottom: 2px solid #980000d0; */
-
+  /* box-shadow: 2px 0 2px black; */
+  /* border-bottom: 2px solid #980000d0; */
 
   padding-top: 10px;
   padding-bottom: 10px;
@@ -34,16 +32,12 @@ header {
   z-index: 1000;
 }
 
-
-header h1 {
-  margin: 0;
-}
-
 header a {
   text-decoration: none;
   color: white;
   margin-left: 1rem;
   margin-right: 1rem;
+  display: inline-flex;
 }
 
 header a:hover,
@@ -254,7 +248,7 @@ header a:focus {
   border: none;
   margin: 1rem;
   box-shadow: 0 0 100px black;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
 }
 
 .preview .preview-description {
