Add fallback fonts to ansi

--- a/dc-tools/ansi/style.css
+++ b/dc-tools/ansi/style.css
@@ -142,7 +142,10 @@ button {
 
   background: var(--background);
   color: var(--text);
-  font-family: Consolas;
+  font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
+    'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
+    'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
+    monospace;
 }
 
 h1,
