--- a/tomate-launcher/style.css
+++ b/tomate-launcher/style.css
@@ -2,12 +2,27 @@
   color: white;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   margin: 0;
   background: url('/tomate-launcher/images/banner.webp') no-repeat center center
     fixed;
+  /* background: linear-gradient(135deg, #ff7f7e, #ff6347, #ff4d4d, #d7263d); */
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow: hidden;
 }
 
 header {
@@ -93,6 +108,7 @@ header a:focus {
 }
 
 #details {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -102,6 +118,7 @@ header a:focus {
   min-height: calc(100vh - 390px - 20rem);
   animation: slide2 1s ease, fade3 1s;
   animation-fill-mode: forwards;
+  padding-bottom: 4rem;
 }
 
 #details section {
@@ -109,7 +126,7 @@ header a:focus {
   flex-direction: column;
 
   align-items: center;
-  padding-top: 4rem;
+  padding-top: 2rem;
   max-width: 100rem;
 }
 
@@ -259,6 +276,8 @@ header a:focus {
 }
 
 #packages {
+  display: flex;
+  flex-direction: column;
   margin-top: 0.5rem;
 }
 
